--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.Container {
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Input-Container {
+  padding: 40px 30px;
+  background-color: #38a14f;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.todo-container{
+  display: flex;
+  justify-content: space-between;
+  width: '60px'
+}
+h1 {
+  font-size: 60px;
+  margin: 0;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-element {
+  display: block;
+  text-align:center;
+}
+
+#myInput {
+  padding: 13px 25px;
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  color: #38a14f;
+  font-size: 18px;
+  width: 95%;
+}
+
+#myInput:focus {
+  outline: transparent;
+}
+
+::placeholder {
+  color: #38a14f;
+  opacity: 0.5;
+  font-size: 18px;
+}
+
+.add-Btn {
+  padding: 10px 25px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  background-color: #38a14f;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: 15px;
+  width: auto;
+  
+}
+
+.add-Btn:focus {
+  outline: transparent;
+}
+
+h2 {
+  text-align: center;
+  color: #7c7c7c;
+  font-size: 35px;
+  font-weight: light;
+  padding: 50px 0;
+}
+
+p {
+  margin: 0;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  list-style: none;
+  color: #7c7c7c;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding: 0px;
+  width: 93%;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.Modal-Btn {
+  padding: 10px 25px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  background-color: #38a14f;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 15px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.Modal-Btn:focus {
+  outline: transparent;
+}
+
+#ModalInput {
+  padding: 10px 15px;
+  background-color: white;
+  border: 0.5px solid #cccbcb;
+  border-radius: 5px;
+  color: #38a14f;
+  font-size: 15px;
+  margin-right: 10px;
+}
+
+#ModalInput:focus {
+  outline: transparent;
+}
+
+#myUl {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 180px;
+  padding: 0;
+}
+.todo-li{
+justify-content: space-between ;
+}
+.complete-btn{
+  padding: 10px 25px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  background-color: #38a14f;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: 15px;
+  width: auto;
+}
+.complete-btn:focus{
+  outline: 0;
+}
+.delete-btn{
+  padding: 10px 25px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  background-color: #38a14f;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: 15px;
+  width: auto;
+}
+.delete-btn:focus{
+  outline: 0;
+}
+.btn{
+  padding: 10px 25px;
+  border: 0.5px solid white;
+  border-radius: 5px;
+  background-color: #38a14f;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: 15px;
+  width: auto;
+}
+.btn:focus {
+  outline: 0;
+}
+.check{
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
 }
